--- a/server/package.json
+++ b/server/package.json
@@ -8,7 +8,8 @@
   "dependencies": {
     "express": "3.4.0",
     "jade": "*",
-    "googlemaps": "*"
+    "googlemaps": "*",
+    "redis": "0.9.1"
   },
   "description": "",
   "main": "app.js",
