--- a/server/package.json
+++ b/server/package.json
@@ -8,7 +8,12 @@
   "dependencies": {
     "express": "3.4.0",
     "jade": "*",
-    "googlemaps": "*"
+    "googlemaps": "*",
+    "twit": "*",
+    "underscore": "*",
+    "instagram-node-lib": "*",
+    "redis": "*",
+    "cron" : "*"
   },
   "description": "",
   "main": "app.js",
